<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/bbd"
>
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
		>
			<!-- LOGO -->
			<ImageView
				style="@style/TitleBarLogo"
			></ImageView>


			<!-- TAILLES -->
			<Button
				android:text="@string/bttailles"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/IV0001"
				android:background="@drawable/tailles"
				android:textStyle="bold"
				android:textSize="20dp"
				android:textColor="#006600"
				android:gravity="right|center_vertical"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btheures"
				android:id="@+id/BTAH"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btseparateur"
				android:id="@+id/BTAS"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btminutes"
				android:id="@+id/BTAM"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btombre"
				android:id="@+id/BTAO"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btinterligne"
				android:id="@+id/BTAI"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btsemaine"
				android:id="@+id/BTASE"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btjour"
				android:id="@+id/BTAJO"
			></Button>
			<Button
				style="@style/ButtonSelect"
				android:text="@string/btmois"
				android:id="@+id/BTAMS"
			></Button>
			
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="WHOOT (C) 2011 COM.YBI"
				android:textSize="10dp"
			></TextView>

		</LinearLayout>

	</ScrollView>
</LinearLayout>