<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:minWidth="300dp" 
  android:minHeight="120dp"
    >
<TextView android:text="@string/choisir_couleur" android:id="@+id/APTextView01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" ></TextView>
<TextView android:text="@string/choisir_couleur" android:id="@+id/APTextView02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" ></TextView>
<ImageView android:id="@+id/APColorImageView" android:layout_width="match_parent" android:layout_height="20pt" android:background="@drawable/color_red"></ImageView>
<ImageView android:id="@+id/APColorImageView" android:layout_width="match_parent" android:layout_height="20pt" android:background="@drawable/color_green"></ImageView>
<ImageView android:id="@+id/APColorImageView" android:layout_width="match_parent" android:layout_height="20pt" android:background="@drawable/color_blue"></ImageView>
<ImageView android:id="@+id/APAlphaImageView" android:layout_width="match_parent" android:layout_height="20pt" android:background="@drawable/alpha"></ImageView>

<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
android:orientation="horizontal"
android:gravity="center_vertical|center_horizontal"
 ><Button android:text="@string/valider" android:layout_height="wrap_content" android:id="@+id/APButtonOk" android:layout_width="wrap_content" android:gravity="center_vertical|center_horizontal"></Button>
<Button android:text="@string/annuler" android:layout_height="wrap_content" android:id="@+id/APButtonCancel" android:layout_width="wrap_content" android:gravity="center_vertical|center_horizontal"></Button>
</LinearLayout>

</LinearLayout>
